--- a/courier.info.yml
+++ b/courier.info.yml
@@ -2,3 +2,5 @@ name: Courier
 type: module
 description: 'Provides storage for various types of messages.'
 core: 8.x
+dependencies:
+  - dynamic_entity_reference
