--- a/courier.info.yml
+++ b/courier.info.yml
@@ -3,4 +3,5 @@ type: module
 description: 'Provides storage for various types of messages.'
 core: 8.x
 dependencies:
+  - text
   - dynamic_entity_reference
