Added Courier Message Composer sub module.
Courier Message Composer allows the user to send a single message to a single recipient using the normal courier message queue.

Added bypass queue permission. (Not implemented, see #10)
Added channel entity type ID paramconverter.
Added permission generator for each channel x identity type combination.
Added compose access checker. Checks for any identity types in any or all channels.

Fixed missing identity token on form displays for template collections without a context.

Fixed #9

--- a/courier.permissions.yml
+++ b/courier.permissions.yml
@@ -2,3 +2,7 @@ administer courier:
   title: 'Administer Courier'
   description: 'Manage settings for Courier.'
   restrict access: TRUE
+
+courier bypass queue:
+  title: 'Skip queue'
+  description: 'Gives users the option to skip the message queue and send the message in the same request. Using the bypass option can impact performance significantly.'
