Added a template collection list element.
Added a controller for displaying a template form of a template collection. The form will automatically create a template if it does not exist.

Added configuration for Semantic UI.
Added generated menu and segment stylesheets from Semantic UI.
Added build instructions for Semantic UI into README.

Created a courier.template_collection_list library.

Fixed #8
Follow up tasks can be found in #11

--- a/courier.routing.yml
+++ b/courier.routing.yml
@@ -1,3 +1,17 @@
+entity.courier_template_collection.channel:
+  path: '/courier/collection/{courier_template_collection}/template/{courier_channel}'
+  defaults:
+    _controller: '\Drupal\courier\Controller\ChannelFormController::template'
+    _title: 'Edit template'
+  requirements:
+    _permission: 'administer courier'
+  options:
+    parameters:
+      courier_template_collection:
+        type: entity:courier_template_collection
+      courier_channel:
+        type: 'courier_channel'
+
 entity.courier_email.canonical:
   path: '/courier/email/{courier_email}'
   defaults:
