--- a/courier.libraries.yml
+++ b/courier.libraries.yml
@@ -8,8 +8,8 @@ courier.template_collection_list:
   js:
     js/template.collection.list.js: {}
   dependencies:
-    - core/jquery
     - core/drupal
-    - core/drupalSettings
-    - core/jquery.once
     - core/drupal.ajax
+    - core/jquery
+    - core/jquery.once
+    - core/jquery.form
