Template form route now makes use of 'templates' permission for Template Collection entities.
Added hook_entity_access for Courier System template collections. Allows permission if user has 'administer account settings' permission.
Courier System configuration form uses 'administer account settings' instead of courier permissions.

#7
#11

--- a/courier.routing.yml
+++ b/courier.routing.yml
@@ -4,7 +4,7 @@ entity.courier_template_collection.channel:
     _controller: '\Drupal\courier\Controller\ChannelFormController::template'
     _title: 'Edit template'
   requirements:
-    _permission: 'administer courier'
+    _entity_access: 'courier_template_collection.templates'
   options:
     parameters:
       courier_template_collection:
