--- a/courier_system/courier_system.info.yml
+++ b/courier_system/courier_system.info.yml
@@ -2,5 +2,6 @@ name: Courier System
 type: module
 description: 'Replaces Drupal core module mails with Courier.'
 core: 8.x
+configure: courier_system.config
 dependencies:
   - courier
