--- a/courier.services.yml
+++ b/courier.services.yml
@@ -6,6 +6,9 @@ services:
     class: Drupal\courier\Service\CourierManager
     arguments: ['@entity.manager', '@plugin.manager.identity_channel']
     parent: container.trait
+  courier.manager.global_template_collection:
+    class: Drupal\courier\Service\GlobalTemplateCollectionManager
+    arguments: ['@keyvalue', '@courier.manager']
   courier.paramconverter.channel:
     class: Drupal\courier\ParamConverter\CourierChannelConverter
     arguments: ['@entity.manager']
