--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ php:
   - 5.5
   - 5.6
   - 7
-  - hhvm
 
 matrix:
   fast_finish: true
@@ -113,6 +112,7 @@ before_script:
   - drupal-ti before_script
 
 script:
+  - export SIMPLETEST_DB=mysql://root:@127.0.0.1/drupal_travis_db
   - drupal-ti script
 
 after_script:
