--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ php:
   - 5.5
   - 5.6
   - 7
-  - hhvm
 
 matrix:
   fast_finish: true
@@ -29,7 +28,7 @@ env:
 
     # Configuration variables.
     - DRUPAL_TI_MODULE_NAME="courier"
-    - DRUPAL_TI_SIMPLETEST_GROUP="courier"
+    - DRUPAL_TI_SIMPLETEST_GROUP="courier,courier_system"
 
     # Define runners and environment vars to include before and after the
     # main runners / environment vars.
@@ -68,7 +67,7 @@ env:
     - DRUPAL_TI_BEHAT_BROWSER="firefox"
 
     # PHPUnit specific commandline arguments.
-    - DRUPAL_TI_PHPUNIT_ARGS=""
+    - DRUPAL_TI_PHPUNIT_ARGS="-c ./phpunit.xml.dist"
     # Specifying the phpunit-core src/ directory is useful when e.g. a vendor/
     # directory is present in the module directory, which phpunit would then
     # try to find tests in. This option is relative to $TRAVIS_BUILD_DIR.
@@ -93,7 +92,7 @@ env:
     #- DRUPAL_TI_RUNNERS="phpunit simpletest behat"
     # Use phpunit-core to test modules with phpunit with Drupal 8 core.
     #- DRUPAL_TI_RUNNERS="phpunit-core"
-    - DRUPAL_TI_RUNNERS="simpletest"
+    - DRUPAL_TI_RUNNERS="phpunit-core simpletest"
 
 mysql:
   database: drupal_travis_db
@@ -113,6 +112,7 @@ before_script:
   - drupal-ti before_script
 
 script:
+  - export SIMPLETEST_DB=mysql://root:@127.0.0.1/drupal_travis_db
   - drupal-ti script
 
 after_script:
