Added global skip queue option.
Can now choose to force all messages to skip the queue.
Setting added to Courier settings form.
Added tests for skip queue functionality.
Updated TestMessage entity to adding internal message buffer to sendMessage.

Fixed #10

--- a/courier.services.yml
+++ b/courier.services.yml
@@ -4,7 +4,7 @@ services:
     parent: default_plugin_manager
   courier.manager:
     class: Drupal\courier\Service\CourierManager
-    arguments: ['@entity_type.manager', '@logger.factory', '@plugin.manager.identity_channel']
+    arguments: ['@entity_type.manager', '@config.factory', '@logger.factory', '@plugin.manager.identity_channel']
   courier.manager.global_template_collection:
     class: Drupal\courier\Service\GlobalTemplateCollectionManager
     arguments: ['@keyvalue', '@courier.manager']
