Cleaned up admin form routes.
Added primary module configure route to module info file.

--- a/courier.info.yml
+++ b/courier.info.yml
@@ -2,6 +2,7 @@ name: Courier
 type: module
 description: 'Provides storage for various types of messages.'
 core: 8.x
+configure: courier.admin.settings
 dependencies:
   - text
   - dynamic_entity_reference
